[package]
name = "crypto-portfolio-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.11"
